# co2ral

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml  setup_venv.bat
.github/workflows/: ci.yml
co2ral/: __main__.py  app.py  serve.py
co2ral/assets/: 02-design-fonts.css  11-plot-rows.js  custom.css  inputs.js  scripts.js  zz-design.css
co2ral/components/: label_slider_value.py
co2ral/core/components/: advanced_settings.py  basic_settings.py  navigation.py  selection.py  settings.py
co2ral/core/components/styles/: component_elements.py  image_elements.py  text_elements.py
co2ral/core/utils/: charts.py  climate.py  experiments.py  images.py  layout.py  marine_model.py  ocean_view.py  particles.py  plot_grid.py  plot_layout.py  presets.py  settings.py
co2ral/env/: colors.py  component_ids.py  javascript_mapping.py
co2ral/locales/: translation.py
co2ral/pages/: contact.py  home.py  ocean.py  teachers.py
tests/: conftest.py
tests/core/: test_assets.py  test_charts.py  test_climate.py  test_helpers.py  test_marine_model.py  test_ocean_view.py  test_particles.py  test_plot_grid.py  test_plot_layout.py  test_settings.py  test_translation.py
